--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -90,7 +90,7 @@ WORKDIR /opt/iotaul
 RUN \
 	# Ensure that Git is installed prior to running npm install
 	apt-get update && \
-	apt-get install -y python python3 && \
+	apt-get install -y python python3 make && \
 	apt-get install -y git && \
 	npm install pm2@3.2.2 -g && \
 	echo "INFO: npm install --production..." && \
